Fix horizontal graph overflow

--- a/DevilDaggersWebsite.Razor/wwwroot/styles/chart.css
+++ b/DevilDaggersWebsite.Razor/wwwroot/styles/chart.css
@@ -18,6 +18,7 @@
 
 .chart {
 	height: 65vh;
+	overflow-x: hidden;
 }
 
 #world-record-progression-highlighter,
